# Co-Vaccine_Availability

./: .pre-commit-config.yaml  Procfile  README.md  availability_calendar.py  db.sqlite3  find_availability.py  manage.py  pyproject.toml  requirements.txt
VaccineAvailability/: asgi.py  env.py  routing.py  settings.py  urls.py  wsgi.py
available/: consumers.py  forms.py  routing.py  urls.py  views.py
available/static/available/: reconnecting-websocket.min.js
available/templates/available/: backup.html  districts_dropdown_options.html  index.html
covaccine/static/available/: reconnecting-websocket.min.js
