[tool.poetry]
name = "cowin-availability"
version = "0.1.0"
description = ""
authors = ["ishuin <ishu.kumars@gmail.com>"]
readme = "README.md"
packages = [{include = "cowin_availability"}]

[tool.poetry.dependencies]
python = "3.10.6"
aioredis = "^2.0.1"
amqp = "^5.1.1"
anyjson = "^0.3.3"
asgiref = "^3.6.0"
async-timeout = "^4.0.2"
attrs = "^22.2.0"
autobahn = "^23.1.1"
automat = "^22.10.0"
backcall = "^0.2.0"
billiard = "^4.1.0"
certifi = "^2022.12.7"
cffi = "^1.15.1"
channels = "^4.0.0"
channels-redis = "^4.0.0"
chardet = "^5.1.0"
colorama = "^0.4.6"
constantly = "^15.1.0"
cryptography = "^39.0.0"
daphne = "^4.0.0"
decorator = "^5.1.1"
django = "^4.1.5"
gunicorn = "^20.1.0"
hiredis = "^2.1.1"
hyperlink = "^21.0.0"
idna = "^3.4"
incremental = "^22.10.0"
ipykernel = "^6.20.2"
ipython = "^8.8.0"
ipython-genutils = "^0.2.0"
jedi = "^0.18.2"
jupyter-client = "^7.4.9"
jupyter-core = "^5.1.3"
kombu = "^5.2.4"
matplotlib-inline = "^0.1.6"
msgpack = "^1.0.4"
nest-asyncio = "^1.5.6"
parso = "^0.8.3"
pickleshare = "^0.7.5"
prompt-toolkit = "^3.0.36"
pyasn1 = "^0.4.8"
pyasn1-modules = "^0.2.8"
pycparser = "^2.21"
pygments = "^2.14.0"
pyopenssl = "^23.0.0"
python-dateutil = "^2.8.2"
pytz = "^2022.7.1"
pywin32 = "^305"
pyzmq = "^25.0.0"
requests = "^2.28.2"
service-identity = "^21.1.0"
six = "^1.16.0"
sqlparse = "^0.4.3"
tornado = "^6.2"
traitlets = "^5.8.1"
twisted = "^22.10.0"
txaio = "^23.1.1"
urllib3 = "^1.26.14"
wcwidth = "^0.2.6"
zope-interface = "^5.5.2"
pre-commit = "^3.0.0"
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
